force-app/main/default/objects/Account/fields/Business_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Number__c</fullName>
    <label>사업자등록번호</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>