force-app/main/default/objects/Account/fields/Business_Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Tax_Type__c</fullName>
    <label>과세 유형</label>
    <length>255</length>
    <type>Text</type>
</CustomField>