force-app/main/default/objects/Account/fields/Business_Verified__c.field-meta.xml
<CustomField>
    <fullName>Business_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>사업자번호 검증 완료</label>
    <type>Checkbox</type>
</CustomField>